fixed empty vtables and improved performance